--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -4,7 +4,7 @@
     <form (ngSubmit)='submitQuote()'#QuoteForm='ngForm'>
         <div class="form-group">
   
-            <label for="name">Name</label>
+            <label for="name">Author</label>
             <input type="text" class="form-control" id="name" [(ngModel)]="newQuote.Quote" Quote="Quote" #name='ngModel' required>
             <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
               <p>Name is required</p>
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group">
   
-            <label for="description">Description</label>
+            <label for="description">Quote</label>
             <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description" name="description" #description="ngModel" required></textarea>
             <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
               <p>Quote required</p>
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group">
   
-            <label for="complete">Completion</label>
+            <label for="complete">Post Date</label>
             <input type='date' id="complete" [(ngModel)]="newQuote.completeDate" name="completeDate" #completeDate="ngModel" required>
             <div [hidden]="completeDate.valid || completeDate.pristine" class="alert alert-danger">
               <p>Date is required</p>
